python/testData/inspections/pyLazyImportInspection/futureImport.py
<error descr="Lazy imports cannot be 'from __future__ import ...'">lazy</error> from __future__ import annotations
